--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="ja">
 <head>
     <meta charset="UTF-8">
-    <title>WebGL(3)</title>
+    <title>WebGLreport</title>
 </head>
 <body>
-    <h1>WebGL演習（３）</h1>
+    <h1>WebGL演習レポート</h1>
     <h2>テクスチャマッピング</h2>
     <p>
         テクスチャ―マッピング例：
