--- a/index.html
+++ b/index.html
@@ -6,18 +6,13 @@
 </head>
 <body>
     <h1>WebGL演習レポート</h1>
-    <h2>テクスチャマッピング</h2>
     <p>
-        テクスチャ―マッピング例：
+        CG作品集：
         <ul>
-            <li><a href="sample7-cit(1).html">sample7-cit(1).html</a></li>
-            <li><a href="sample7-cit(2).html">sample7-cit(2).html</a></li>
-            <li><a href="sample7-cit(3).html">sample7-cit(3).html</a></li>
+            <li><a href="report1.html">sample7-cit(1).html</a></li>
+            <li><a href="report2.html">sample7-cit(2).html</a></li>
+            <li><a href="report3.html">sample7-cit(3).html</a></li>
         </ul>
-        顔のテクスチャ―：<a href="sample7-face.html">sample7-face.html</a><br>
-        ビル（実写画像を使う）を作る：<a href="sample7-buil.html">sample7-buil.html</a><br>
-        バンプマッピング例：<a href="sample7-bump.html">sample7-bunp.html</a><br>
-        バンプマッピング：<a href="teisyutuyou.html">teisyutuyou.html</a><br>
     </p>
 </body>
 </html>
