--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <p>
         CG作品集：
         <ul>
-            <li><a href="report1.html">sample7-cit(1).html</a></li>
-            <li><a href="report2.html">sample7-cit(2).html</a></li>
-            <li><a href="report3.html">sample7-cit(3).html</a></li>
+            <li><a href="report1.html">レポート１</a></li>
+            <li><a href="report2.html">レポート２</a></li>
+            <li><a href="report3.html">レポート３</a></li>
         </ul>
     </p>
 </body>
