--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 <body>
     <h1>WebGL演習レポート</h1>
     <p>
+        <a href="report1.html">レポート１</a>
         CG作品集：
         <ul>
-            <li><a href="report1.html">レポート１</a></li>
             <li><a href="report2.html">レポート２</a></li>
             <li><a href="report3.html">レポート３</a></li>
         </ul>
