--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <ul>
             <li><a href="report2.html">レポート２</a></li>
             <li><a href="report3.html">レポート３</a></li>
+            <li><a href="report4.html">レポート４</a></li>
         </ul>
     </p>
 </body>
