--- a/report5.html
+++ b/report5.html
@@ -55,7 +55,7 @@
 
         // 木をスプライトで作成
         var textureLoader = new THREE.TextureLoader();  
-        var texture = textureLoader.load("img/stone.jpg");
+        var texture = textureLoader.load("img/ganba.png");
         const material = new THREE.SpriteMaterial({ map: texture,});
 
         // 木左
