--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <h1>WebGL演習レポート</h1>
     <p>
         <a href="report1.html">レポート１</a>
+         <a href="Sample.html">sample</a>
         <p>
         CG作品集：
         <ul>
