--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
 <body>
     <h1>WebGL演習レポート</h1>
     <p>
-        <a href="report1.html">レポート１</a>
+        <a href="report1.html">授業への意気込み（第１回レポート）</a>
         <p>
         CG作品集：
         <ul>
-            <li><a href="report2.html">レポート２</a></li>
+            <li><a href="report2.html">様々な図形の表示（第２回レポート）</a></li>
             <li><a href="report3.html">レポート３</a></li>
             <li><a href="report4.html">レポート４</a></li>
             <li><a href="report5.html">レポート５</a></li>
