--- a/report2.html
+++ b/report2.html
@@ -12,8 +12,7 @@
 </head>
 <body>
   <h1>様々な図形の表示</h1>
-  
-  
+  <p>
   
  <script>
   var init = function() {
@@ -127,5 +126,7 @@
   }
   window.addEventListener('DOMContentLoaded', init);
 </script>
+<p>
+    本課題
 </body>
 </html>
