--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
         CG作品集：
         <ul>
             <li><a href="report2.html">様々な図形の表示（第２回レポート）</a></li>
-            <li><a href="report3.html">レポート３</a></li>
-            <li><a href="report4.html">レポート４</a></li>
+            <li><a href="report3.html">CGで作ったポリゴン２</a></li>
+            <li><a href="report4.html">テクスチャーマップ</a></li>
             <li><a href="report5.html">レポート５</a></li>
         </ul>
     </p>
