--- a/report3.html
+++ b/report3.html
@@ -5,6 +5,13 @@
     <script src="https://unpkg.com/three@0.137.4/examples/js/controls/OrbitControls.js"></script>
   </head>
 <body>
+  <h1>CGで作ったポリゴン２</h1>
+  本課題は、以下の２つである。<br>
+  1.マウスを用いたカメラの移動ができること<br>
+  2.モデルのグループ化を行うこと<br>
+  これらを考慮しながら、<a href="porigon2.png">ポリゴン２</a>を作成した。<br>
+  (ポリゴン２はポケットモンスターのキャラクターの１匹である)
+ 
  <script>
       // ページの読み込みを待つ
       window.addEventListener('DOMContentLoaded', init);
