--- a/report3.html
+++ b/report3.html
@@ -9,7 +9,7 @@
   本課題は、以下の２つである。<br>
   1.マウスを用いたカメラの移動ができること<br>
   2.モデルのグループ化を行うこと<br>
-  これらを考慮しながら、<a href="porigon2.png">ポリゴン２</a>を作成した。<br>
+  これらを考慮しながら、<a href="img/porigon2.png">ポリゴン２</a>を作成した。<br>
   (ポリゴン２はポケットモンスターのキャラクターの１匹である)
  
  <script>
