--- a/report3.html
+++ b/report3.html
@@ -10,7 +10,7 @@
   1.マウスを用いたカメラの移動ができること<br>
   2.モデルのグループ化を行うこと<br>
   これらを考慮しながら、ポリゴン２を作成した。<br>
-  (ポリゴン２はポケットモンスターのキャラクターの１匹である)
+  (ポリゴン２はポケットモンスターのキャラクターの１匹である)<br>
  
  <script>
       // ページの読み込みを待つ
