--- a/report1.html
+++ b/report1.html
@@ -16,7 +16,7 @@
     document.write("<p>この授業では、WebGLを用いてコンピュータグラフィックスを作成します。</p>");
 
     var image = new Image(128,128);
-    image.src = "ganba.png";
+    image.src = "img/ganba.png";
     document.body.appendChild(image);
 </script>
 
