--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <li><a href="report2.html">様々な図形の表示（第２回レポート）</a></li>
             <li><a href="report3.html">CGで作ったポリゴン２</a></li>
             <li><a href="report4.html">テクスチャーマップ</a></li>
-            <li><a href="report5.html">レポート５</a></li>
+            <li><a href="report5.html">ビルボード</a></li>
         </ul>
     </p>
 </body>
