--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
         CG作品集：
         <ul>
             <li><a href="report2.html">様々な図形の表示（第２回レポート）</a></li>
-            <li><a href="report3.html">CGで作ったポリゴン２</a></li>
-            <li><a href="report4.html">テクスチャーマップ</a></li>
-            <li><a href="report5.html">ビルボード</a></li>
+            <li><a href="report3.html">CGで作ったポリゴン２（第３回レポート）</a></li>
+            <li><a href="report4.html">テクスチャーマップ（第４回レポート）</a></li>
+            <li><a href="report5.html">ビルボード（第５回レポート）</a></li>
         </ul>
     </p>
 </body>
