--- a/report5.html
+++ b/report5.html
@@ -47,12 +47,14 @@
         scene.add(directionalLight2);
 
         // helper
+        /*
         const gridHelper = new THREE.GridHelper(2,10); // size, step
         scene.add(gridHelper);
         const axisHelper = new THREE.AxisHelper(2); //軸の長さ　X：赤、Y：緑、z：青
         scene.add(axisHelper);
+        */
 
-        // 木をスプライトで作成
+        // 星をスプライトで作成
         var textureLoader = new THREE.TextureLoader();  
         var texture = textureLoader.load("img/star.png");
         const material = new THREE.SpriteMaterial({ map: texture,});
