--- a/report5.html
+++ b/report5.html
@@ -21,7 +21,7 @@
         document.body.appendChild(renderer.domElement);
         renderer.setSize(width, height);
         // 背景の色を設定
-        renderer.setClearColor(0xffff);
+        renderer.setClearColor(0xffffff);
 
 
         // シーンを作成
