--- a/report5.html
+++ b/report5.html
@@ -53,6 +53,13 @@
         const axisHelper = new THREE.AxisHelper(2); //軸の長さ　X：赤、Y：緑、z：青
         scene.add(axisHelper);
         */
+        
+        //球
+        var sphereGeometry = new THREE.SphereGeometry(0.5,32,32); 
+        var sphereMaterial = new THREE. MeshLambertMaterial({color:0xff6600});
+        var sphere = new THREE.Mesh(sphereGeometry,sphereMaterial);
+        sphere.position.set(0,1.5,0);
+        scene.add(sphere)
 
         // 星をスプライトで作成
         var textureLoader = new THREE.TextureLoader();  
