--- a/report5.html
+++ b/report5.html
@@ -6,7 +6,7 @@
   </head>
 <body>
  <h1>板ポリにテクスチャ―</h1>
- 板ポリにテクスチャ―貼ってみた<br>
+ ビルボード<br>
  <script>
       // ページの読み込みを待つ
       window.addEventListener('DOMContentLoaded', init);
@@ -56,7 +56,7 @@
         
         // テクスチャー読み込み
         var textureLoader1 = new THREE.TextureLoader();
-        var texture1 = textureLoader1.load("stone.jpg");
+        var texture1 = textureLoader1.load("ganba.png");
         var mat = new THREE.MeshPhongMaterial();
         mat.map = texture1;
         
@@ -68,7 +68,7 @@
         //球
         var geometry2 = new THREE.SphereGeometry(0.5, 32, 32 ); ;
         var Sphere = new THREE.Mesh(geometry2, mat);
-        Sphere.position.set(0,0,0);
+        Sphere.position.set(0,1,0);
         scene.add(Sphere);
 
         // 星をスプライトで作成
