--- a/report5.html
+++ b/report5.html
@@ -14,14 +14,14 @@
       function init() {
         // サイズを指定
         const width = 800
-        const height = 400;
+        const height = 600;
 
         // レンダラーを作成
         var renderer = new THREE.WebGLRenderer();
         document.body.appendChild(renderer.domElement);
         renderer.setSize(width, height);
         // 背景の色を設定
-        renderer.setClearColor(0xffff00);
+        renderer.setClearColor(0xffffdd);
 
 
         // シーンを作成
@@ -95,8 +95,8 @@
         function update() {
           
           //球を回転
-          Sphere.rotation.x += 0.01;
-          Sphere.rotation.y += 0.01;
+          Sphere.rotation.x += 0.001;
+          Sphere.rotation.y += 0.001;
           
           // レンダリング
           renderer.render(scene, camera);
