--- a/report5.html
+++ b/report5.html
@@ -6,7 +6,9 @@
   </head>
 <body>
  <h1>板ポリにテクスチャ―</h1>
- ビル<br>
+ 本課題は、ビルボードを使うことである。<br>
+ それを踏まえて、ビルボードを利用して複数の星を生成した。<br>
+ 中心の地球は、前回課題のバンプマップを利用して作成した。<br>
  <script>
       // ページの読み込みを待つ
       window.addEventListener('DOMContentLoaded', init);
