--- a/report5.html
+++ b/report5.html
@@ -5,7 +5,7 @@
     <script src="https://unpkg.com/three@0.137.4/examples/js/controls/OrbitControls.js"></script>
   </head>
 <body>
- <h1>板ポリにテクスチャ―</h1>
+ <h1>ビルボードを利用した星々</h1>
  本課題は、ビルボードを使うことである。<br>
  それを踏まえて、ビルボードを利用して複数の星を生成した。<br>
  中心の地球は、前回課題のバンプマップを利用して作成した。<br>
