--- a/report5.html
+++ b/report5.html
@@ -7,8 +7,8 @@
   </head>
 <body>
  <h1>ビルボードを利用した星々</h1>
- 本課題は、ビルボードを使うことである。<br>
- それを踏まえて、ビルボードを利用して複数の星を生成した。<br>
+ 本課題:ビルボードを使うこと<br>
+ これを踏まえて、ビルボードを利用して複数の星を生成した。<br>
  中心の地球は、前回課題のバンプマップを利用して作成した。<br>
  <script>
       // ページの読み込みを待つ
