--- a/report2.html
+++ b/report2.html
@@ -12,7 +12,7 @@
 </head>
 <body>
   <h1>様々な図形の表示</h1>
-  本課題は、以下の３つである。<br>
+  本課題:<br>
   1.立方体や角錐など、様々な図形を表示させること<br>
   2.ワイヤーフレームとサーフェースモデルの両方を表示すること<br>
   3.一つのシーンに複数のオブジェクトを表示すること<br>
