--- a/report3.html
+++ b/report3.html
@@ -6,7 +6,7 @@
   </head>
 <body>
   <h1>CGで作ったポリゴン２</h1>
-  本課題は、以下の２つである。<br>
+  本課題:<br>
   1.マウスを用いたカメラの移動ができること<br>
   2.モデルのグループ化を行うこと<br>
   これらを考慮しながら、ポリゴン２を作成した。<br>
