--- a/report4.html
+++ b/report4.html
@@ -6,7 +6,7 @@
   </head>
 <body>
   <h1>テクスチャーマップ</h1> 
-  本課題は、図形にテクスチャーを貼り、バンプマップを作成することである。<br>
+  本課題:図形にテクスチャーを貼り、バンプマップを作成すること<br>
  <script>
       // ページの読み込みを待つ
       window.addEventListener('DOMContentLoaded', init);
