--- a/report5.html
+++ b/report5.html
@@ -76,7 +76,7 @@
 
         // 星をスプライトで作成
         var textureLoader2 = new THREE.TextureLoader();  
-        var texture2 = textureLoader2.load("img/whitestar.");
+        var texture2 = textureLoader2.load("img/whitestar.png");
         const material = new THREE.SpriteMaterial({ map: texture2,});
 　　　　
         //星をループで生成
