--- a/report5.html
+++ b/report5.html
@@ -24,7 +24,7 @@
         document.body.appendChild(renderer.domElement);
         renderer.setSize(width, height);
         // 背景の色を設定
-        renderer.setClearColor(0xffffdd);
+        renderer.setClearColor(0x);
 
 
         // シーンを作成
