--- a/report5.html
+++ b/report5.html
@@ -71,7 +71,7 @@
         //球
         var geometry2 = new THREE.SphereGeometry(0.5, 32, 32 ); ;
         var Sphere = new THREE.Mesh(geometry2, mat);
-        Sphere.position.set(0,1,0);
+        Sphere.position.set(0,-1,0);
         scene.add(Sphere);
 
         // 星をスプライトで作成
@@ -88,7 +88,7 @@
            sprite.position.z = 4 * (Math.random() - 0.5);
           
            // スケールを調整
-           sprite.scale.set(0.1, 0.1, 0.1);
+           sprite.scale.set(0.05, 0.05, 0.05);
 
            scene.add(sprite);
         }
