--- a/report5.html
+++ b/report5.html
@@ -8,8 +8,8 @@
 <body>
  <h1>ビルボードを利用した星々</h1>
  本課題:ビルボードを使うこと<br>
- これを踏まえて、ビルボードを利用して複数の星を生成した。<br>
- 中心の地球は、前回課題のバンプマップを利用して作成した。<br>
+ これを踏まえて、ビルボードを利用して複数の星を生成してみた。<br>
+ 
  <script>
       // ページの読み込みを待つ
       window.addEventListener('DOMContentLoaded', init);
