--- a/report5.html
+++ b/report5.html
@@ -94,7 +94,7 @@
         }
         
         //動かす星
-        var shstar[10];
+        var shstar = new Array(10);
         for (let i = 0; i < 10; i++){
            var star = new THREE.Sprite(material);
            shstar[i] = star;
