--- a/report5.html
+++ b/report5.html
@@ -122,8 +122,18 @@
              shstar[i].position.y -= i / 1000;
              shstar[i].position.z -= i / 1000;
             
-             if( shstar[i].position.x <= 0 ){
+             if( shstar[i].position.x <= -3 ){
                shstar[i].position.x = 4 * (Math.random() - 0.5);
+               shstar[i].position.y = 1.5 * Math.random();
+               shstar[i].position.z = 4 * (Math.random() - 0.5);
+             } else if ( shstar[i].position.y <= -3 ){
+               shstar[i].position.x = 4 * (Math.random() - 0.5);
+               shstar[i].position.y = 1.5 * Math.random();
+               shstar[i].position.z = 4 * (Math.random() - 0.5);
+             } else if ( shstar[i].position.z <= -3 ){
+               shstar[i].position.x = 4 * (Math.random() - 0.5);
+               shstar[i].position.y = 1.5 * Math.random();
+               shstar[i].position.z = 4 * (Math.random() - 0.5);
              }
             
           }
