--- a/report5.html
+++ b/report5.html
@@ -1,12 +1,12 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>ビルボードを利用した星々</title>
+    <title>星々</title>
     <script src="https://unpkg.com/three@0.137.4/build/three.min.js"></script>
     <script src="https://unpkg.com/three@0.137.4/examples/js/controls/OrbitControls.js"></script>
   </head>
 <body>
- <h1>ビルボードを利用した星々</h1>
+ <h1>星々</h1>
  本課題:ビルボードを使うこと<br>
  これを踏まえて、ビルボードを利用して複数の星を生成してみた。<br>
  
