--- a/report5.html
+++ b/report5.html
@@ -122,7 +122,7 @@
              shstar[i].position.y -= i / 1000;
              shstar[i].position.z -= i / 1000;
             
-             shstar[i].rotation.x += 0.1;
+             shstar[i].rotation.y += 0.1;
             
              if( shstar[i].position.x <= -3 ){
                shstar[i].position.x = 5 * (Math.random() - 0.5);
