--- a/report5.html
+++ b/report5.html
@@ -122,8 +122,7 @@
              shstar[i].position.y -= i / 1000;
              shstar[i].position.z -= i / 1000;
             
-             shstar[i].rotation.y += 0.1;
-            
+             //画面外に行ったりしたら再生成
              if( shstar[i].position.x <= -3 ){
                shstar[i].position.x = 5 * (Math.random() - 0.5);
                shstar[i].position.y = 2.5 * Math.random();
