--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
     <h1>WebGL演習レポート</h1>
     <p>
-        <a href="report1.html">授業への意気込み（第１回レポート）</a>
+        <a href="report1.html">授業への意気込み</a>（第１回レポート）
         <p>
         CG作品集：
         <ul>
