--- a/report4.html
+++ b/report4.html
@@ -88,6 +88,21 @@
         var cylinder2 = new THREE.Mesh(cylinderGeometry2, mat);
         cylinder2.position.set(0,2,0);
         scene.add(cylinder2);
+        
+        //プロペラ
+        var geometry = new THREE.BoxGeometry(0.1, 0.35, 0.6);
+        var material = new THREE.MeshPhongMaterial({ color: 0xffffff });
+        var box = new THREE.Mesh(geometry, material);
+        box.position.set(1.6,2,0); 
+        box.scale.y = 10;
+        scene.add(box);  
+
+        //プロペラ2
+        var box2 = new THREE.Mesh(geometry, material);
+        box2.position.set(1.6,2,0); 
+        box2.scale.y = 10;
+        box2.rotation.x = 1.6;
+        scene.add(box2); 
 
 
         update();
