--- a/report4.html
+++ b/report4.html
@@ -97,7 +97,7 @@
         //角錐
         
         var coneGeometry = new THREE.ConeGeometry(1.7,1.5,16);
-        var cone = new THREE.Mesh(coneGeometry, mat);
+        var cone = new THREE.Mesh(coneGeometry, mat1);
         cone.position.set(-2,3,-3);
         scene.add(cone);
         
