--- a/report4.html
+++ b/report4.html
@@ -124,7 +124,7 @@
         scene.add(box2); 
         
         //窓
-        var geometry2 = new THREE.BoxGeometry(0.5, 0.5, 0.5);
+        var geometry2 = new THREE.BoxGeometry(1,1,1);
         var window = new THREE.Mesh(geometry2, mat3);
         window.position.set(-0.3,2,-3); 
         window.scale.y = 10;
