--- a/report4.html
+++ b/report4.html
@@ -124,9 +124,9 @@
         scene.add(box2); 
         
         //窓
-        var geometry2 = new THREE.BoxGeometry(1,1,1);
+        var geometry2 = new THREE.BoxGeometry(0.7,0.7,0.7);
         var window = new THREE.Mesh(geometry2, mat3);
-        window.position.set(-2,2,-5); 
+        window.position.set(-2,2,3); 
         scene.add(window);
 
 
