--- a/report4.html
+++ b/report4.html
@@ -126,7 +126,7 @@
         //窓
         var geometry2 = new THREE.BoxGeometry(0.7,0.7,0.7);
         var window = new THREE.Mesh(geometry2, mat3);
-        window.position.set(-2,1.7,0); 
+        window.position.set(-2,1.5,-1.5); 
         scene.add(window);
 
 
