--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             <li><a href="report3.html">CGで作ったポリゴン２</a>（第３回レポート）</li>
             <li><a href="report4.html">テクスチャーマップ</a>（第４回レポート）</li>
             <li><a href="report5.html">ビルボード</a>（第５回レポート）</li>
+            <li><a href="reportZ.html">lpis</a>（最終レポート）</li>
         </ul>
     </p>
 </body>
