--- a/reportZ.html
+++ b/reportZ.html
@@ -60,7 +60,7 @@
         
         //体
         var body_g = new THREE.SphereGeometry( 0.15, 32, 32 );
-        var material = new THREE.MeshBasicMaterial({ color: 0xffffff });
+        //var material = new THREE.MeshBasicMaterial({ color: 0xffffff });
         var body = new THREE.Mesh( body_g, mat);
         body.scale.x =0.2;
         body.scale.y =2;
