--- a/reportZ.html
+++ b/reportZ.html
@@ -22,7 +22,7 @@
         // レンダラー：シャドウを有効にする
         //renderer.shadowMap.enabled = true;
         // 背景の色を設定
-        renderer.setClearColor(0x000080);
+        renderer.setClearColor(0xffff00);
 
 
         // シーンを作成
