--- a/reportZ.html
+++ b/reportZ.html
@@ -22,7 +22,7 @@
         // レンダラー：シャドウを有効にする
         //renderer.shadowMap.enabled = true;
         // 背景の色を設定
-        renderer.setClearColor(0xffff00);
+        renderer.setClearColor(0x000080);
 
 
         // シーンを作成
@@ -47,7 +47,8 @@
         // シーンに追加
         scene.add(directionalLight2);
         
-        // レンガ読み込み
+        /*
+        // ラピスラズリ読み込み
         var textureLoader1 = new THREE.TextureLoader();
         var texture1 = textureLoader1.load("img/lapis-lazuli.jpg");
         var mat1 = new THREE.MeshPhongMaterial();
@@ -57,11 +58,12 @@
         var bump1 = textureLoader1.load("img/lapis-lazuli.jpg");
         mat1.bumpMap = bump1;
         mat1.bumpscale = 0.4;
+        */
         
         //体
         var body_g = new THREE.SphereGeometry( 0.15, 32, 32 );
-        //var material = new THREE.MeshBasicMaterial({ color: 0xffffff });
-        var body = new THREE.Mesh( body_g, mat1);
+        var mat_w = new THREE.MeshBasicMaterial({ color: 0xffffff });
+        var body = new THREE.Mesh( body_g, mat_w);
         body.scale.x =0.2;
         body.scale.y =2;
         body.scale.z =0.2;
@@ -88,13 +90,13 @@
          // bevelSegments: 2,  // ui: bevelSegments
         };
         var winggeometry = new THREE.ExtrudeGeometry(shape, extrudeSettings);
-        var wing1 = new THREE.Mesh(winggeometry, mat1); 
+        var wing1 = new THREE.Mesh(winggeometry, mat_3); 
         wing1.position.set(-0.1,0,0);
         wing1.rotation.z = -1.5;
         wing1.scale.set(0.06,0.07,0.07);
         wing1.scale.y = 0.02;
         //羽２
-        var wing2 = new THREE.Mesh(winggeometry, mat1); 
+        var wing2 = new THREE.Mesh(winggeometry, mat_3); 
         wing2.position.set(0.1,0,0);
         wing2.rotation.z = 1.5;
         wing2.scale.set(0.06,0.07,0.07);
