--- a/reportZ.html
+++ b/reportZ.html
@@ -57,7 +57,7 @@
         // バンプマップ読み込み
         var bump1 = textureLoader1.load("img/lapis.jpg");
         mat_lapis.bumpMap = bump1;
-        mat_lapis.bumpscale = 0.4;
+        //mat_lapis.bumpscale = 0.4;
         
         
         //円柱
