--- a/reportZ.html
+++ b/reportZ.html
@@ -128,7 +128,7 @@
         
         //pinkmoon
         var textureLoader_wfs = new THREE.TextureLoader();  
-        var texture_wfs = textureLoader_wfs.load("img/pinkmoon.jpg");
+        var texture_wfs = textureLoader_wfs.load("img/pinkmoon.png");
         const mat_wfs = new THREE.SpriteMaterial({ map: texture_wfs,});
 　　　　
         //月
