--- a/reportZ.html
+++ b/reportZ.html
@@ -22,7 +22,7 @@
         // レンダラー：シャドウを有効にする
         renderer.shadowMap.enabled = true;
         // 背景の色を設定
-        renderer.setClearColor(0x00);
+        renderer.setClearColor(0x00ffff);
 
 
         // シーンを作成
