--- a/reportZ.html
+++ b/reportZ.html
@@ -126,7 +126,7 @@
         
         //海藻1
         var textureLoader_k1 = new THREE.TextureLoader();  
-        var texture_k1 = textureLoader_k1.load("img/kaisou.png");
+        var texture_k1 = textureLoader_k1.load("img/kaisou1.png");
         const mat_k1 = new THREE.SpriteMaterial({ map: texture_k1,});
 　　　　
         for (let i = 0; i < 5; i++) {
