--- a/reportZ.html
+++ b/reportZ.html
@@ -134,7 +134,7 @@
            k1.position.x = 3.8 * (Math.random() - 0.5);
            k1.position.y = -2;
            k1.position.z = 4 * (Math.random() - 0.5);
-           k1.scale.set(0.5, 0.5, 0.5);
+           k1.scale.set(2,2,2);
            scene.add(k1);
         }
         
