--- a/reportZ.html
+++ b/reportZ.html
@@ -137,7 +137,7 @@
            k1.position.y = -2;
            k1.position.z = 4 * (Math.random() - 0.5);
            k1.scale.set(2,2,2);
-           k1.scale.y = 4 * (Math.random() - 0.5);
+           k1.scale.y = 4 * (Math.random());
            scene.add(k1);
         }
         
@@ -148,7 +148,7 @@
 　　　　
         for (let i = 0; i < 5; i++) {
            var k2 = new THREE.Sprite(mat_k2);
-           k2.position.x = 3.8 * (Math.random() - 0.5);
+           k2.position.x = 3.8 * (Math.random());
            k2.position.y = -2;
            k2.position.z = 4 * (Math.random() - 0.5);
            k2.scale.set(2,2,2);
