--- a/reportZ.html
+++ b/reportZ.html
@@ -152,7 +152,7 @@
            k2.position.y = -2;
            k2.position.z = 4 * (Math.random() - 0.5);
            k2.scale.set(2,2,2);
-           k2.scale.y = 4 * (Math.random() - 0.5);
+           k2.scale.y = 4 * (Math.random());
            scene.add(k2);
         }
         
