--- a/reportZ.html
+++ b/reportZ.html
@@ -59,7 +59,7 @@
         //床
         var planeGeometry = new THREE.PlaneGeometry(30,30);
         var planeMaterial = new THREE.MeshPhongMaterial({ color: 0xffffff });
-        var plane = new THREE.Mesh(planeGeometry,planeMaterial);
+        var plane = new THREE.Mesh(planeGeometry,mat_lapis);
         plane.receiveShadow = true;   //影
         plane.rotation.set( -Math.PI/2, 0, 0 );
         plane.position.set(0,-3,0);
