--- a/reportZ.html
+++ b/reportZ.html
@@ -43,7 +43,7 @@
         */
         
         const light = new THREE.PointLight(0xFFFFFF, 1);
-        light.position.set(0, 10, 0);
+        light.position.set(0, 20, 0);
         scene.add(light);
         
         // ラピスラズリ読み込み
@@ -59,7 +59,7 @@
         //床
         var planeGeometry = new THREE.PlaneGeometry(30,30);
         var planeMaterial = new THREE.MeshPhongMaterial({ color: 0xffffff });
-        var plane = new THREE.Mesh(planeGeometry,mat_lapis);
+        var plane = new THREE.Mesh(planeGeometry,planeMaterial);
         plane.receiveShadow = true;   //影
         plane.rotation.set( -Math.PI/2, 0, 0 );
         plane.position.set(0,-3,0);
