--- a/reportZ.html
+++ b/reportZ.html
@@ -184,7 +184,7 @@
         var f_body_wg = new THREE.SphereGeometry( 1, 32, 32 );
         var mat_b_w = new THREE.MeshBasicMaterial({ color: 0x0000ff ,wireframe: true});
         var f_body_w = new THREE.Mesh( f_body_wg, mat_b_w);
-        f_body_w.castShadow = true;
+        //f_body_w.castShadow = true;
         f_body_w.scale.x =3;
         f_body_w.scale.y =1.65;
         f_body_w.position.set(0,2,0);
