--- a/reportZ.html
+++ b/reportZ.html
@@ -65,7 +65,7 @@
         //イルカ
         const loader = new THREE.TDSLoader();
         //loader.setResourcePath('3dmodel/whple.3ds');
-        loader.load'3dmodel/whole.3ds',  (object) => {
+        loader.load('3dmodel/whole.3ds',  (object) => {
         scene.add(object);
         });
         
