--- a/reportZ.html
+++ b/reportZ.html
@@ -64,7 +64,7 @@
         
         //イルカ
         const loader = new THREE.GLTFLoader();
-        loader.load('3dmodel/Fish.glb', (gltf) => {
+        loader.load('3dmodel/Shark.glb', (gltf) => {
           const model = gltf.scene;
           scene.add(model);
         });
