--- a/reportZ.html
+++ b/reportZ.html
@@ -207,6 +207,8 @@
 
         // 毎フレーム時に実行されるループイベントです
         function update(){
+          
+          model.position.x += 0.1;
         
           /*
           //羽ばたき
