--- a/reportZ.html
+++ b/reportZ.html
@@ -69,6 +69,7 @@
         var model;
         loader.load('3dmodel/Shark.glb', (gltf) => {
           model = gltf.scene;
+          model.scale.set(2,2,2);
           model.position.set(0,2,0);
           scene.add(model);
         });
