--- a/reportZ.html
+++ b/reportZ.html
@@ -69,8 +69,8 @@
         var model;
         loader.load('3dmodel/Shark.glb', (gltf) => {
           model = gltf.scene;
-          model.scale.set(2,2,2);
-          model.position.set(0,2,0);
+          model.scale.set(4,4,4);
+          model.position.set(0,2,-3);
           scene.add(model);
         });
         
