--- a/reportZ.html
+++ b/reportZ.html
@@ -69,6 +69,7 @@
         var model;
         loader.load('3dmodel/Shark.glb', (gltf) => {
           model = gltf.scene;
+          model.castShadow = true; 
           model.scale.set(4,4,4);
           model.position.set(0,2,-3);
           scene.add(model);
