--- a/reportZ.html
+++ b/reportZ.html
@@ -204,6 +204,7 @@
         //f_body_w.castShadow = true;
         f_body_w.scale.x =3.2;
         f_body_w.scale.y =1.65;
+        f_body_w.scale.z =1.65;
         f_body_w.position.set(-1.5,2,-3);
         scene.add(f_body_w);
         
