--- a/reportZ.html
+++ b/reportZ.html
@@ -228,7 +228,7 @@
           f_body_w.scale.x += 0.02;
           f_body_w.scale.y += 0.01;
           f_body_w.scale.z += 0.01;
-        } else if(parts.scale.x <=1){
+        } else if(parts.scale.x <= 2){
           if(parts.scale.x == 0.1){
             scene.add(parts);
           }
@@ -237,7 +237,10 @@
           parts.scale.z += 0.01
         }
           
-        if(parts.scale.x >=0.5 && parts1.scale.x <= 1){
+        if(parts.scale.x >=0.5 && parts1.scale.x <= 2){
+          if(parts.scale.x == 0.5){
+            scene.add(parts);
+          }
           parts1.scale.x += 0.01
           parts1.scale.y += 0.01
           parts1.scale.z += 0.01
