--- a/reportZ.html
+++ b/reportZ.html
@@ -239,7 +239,7 @@
           
         if(parts.scale.x >=0.5 && parts1.scale.x <= 2){
           if(parts.scale.x == 0.5){
-            scene.add(parts);
+            scene.add(parts1);
           }
           parts1.scale.x += 0.01
           parts1.scale.y += 0.01
