--- a/reportZ.html
+++ b/reportZ.html
@@ -254,7 +254,7 @@
           parts2.scale.z += 0.01;
         }
           
-        if(parts.scale2.x >=0.3 && parts1.scale.x <= 2){
+        if(parts2.scale.x >=0.3 && parts1.scale.x <= 2){
           if(parts1.scale.x == 0.1){
             scene.add(parts1);
           }
@@ -262,7 +262,7 @@
           parts1.scale.y += 0.01;
           parts1.scale.z += 0.01;
         }  
-        if(parts.scale1.x >=0.3 && parts3.scale.x <= 2){
+        if(parts1.scale.x >=0.3 && parts3.scale.x <= 2){
           if(parts3.scale.x == 0.1){
             scene.add(parts3);
           }
