--- a/reportZ.html
+++ b/reportZ.html
@@ -220,7 +220,7 @@
         var mat_SH = new THREE.MeshPhongMaterial();
         mat_SH.map = texture_SH;       
         // バンプマップ読み込み
-        var bump_SH = textureLoader1.load("img/Sharkhead.png");
+        var bump_SH = textureLoader_SH.load("img/Sharkhead.png");
         mat_SH.bumpMap = bump_SH;
         
         
