--- a/reportZ.html
+++ b/reportZ.html
@@ -337,19 +337,19 @@
           i += 0.05;
           */
           if(f_body_w.scale.x >= 3 && tab.scale.y <= 2){
-            if(tab.scale.x == 0.01){
+            if(tab.scale.y == 0.01){
               scene.add(tab);
             }
             tab.scale.y += 0.05;
           }
           if(tab.scale.y >= 0.5 && tab1.scale.y <= 2){
-            if(tab1.scale.x == 0.01){
+            if(tab1.scale.y == 0.01){
               scene.add(tab1);
             }
             tab1.scale.y += 0.05;
           }
           if(tab1.scale.y >= 0.5 && tab2.scale.y <= 2){
-            if(tab2.scale.x == 0.01){
+            if(tab2.scale.y == 0.01){
               scene.add(tab2);
             }
             tab2.scale.y += 0.05;
