--- a/reportZ.html
+++ b/reportZ.html
@@ -274,7 +274,7 @@
             f_body_w.scale.x += 0.02;
             f_body_w.scale.y += 0.01;
             f_body_w.scale.z += 0.01;
-          } else if(parts.scale.x <= 2.5){
+          } else if(tab2.scale.y >= 1.9 && parts.scale.x <= 2.5){
             if(parts.scale.x == 0.1){
               scene.add(parts);
             }
