--- a/reportZ.html
+++ b/reportZ.html
@@ -196,7 +196,7 @@
         
         //黒い面体
         var parts_g = new THREE.OctahedronGeometry(1, 2);
-        var parts_m = new THREE.MeshBasicMaterial({ color: 0x000000,transparent: true, opacity: 0.8});
+        var parts_m = new THREE.MeshBasicMaterial({ color: 0x000000});
         var parts = new THREE.Mesh( parts_g, parts_m);
         parts.scale.set(0.1,0.1,0.1);
         parts.position.set(0,2,-3);
