--- a/reportZ.html
+++ b/reportZ.html
@@ -365,6 +365,10 @@
               scene.remove(tab);
               scene.remove(tab1);
               scene.remove(tab2);
+              tab_g.dispose();
+              mat_SH.dispose();
+              mat_SB.dispose();
+              mat_ST.dispose();
             
           }
           
