--- a/reportZ.html
+++ b/reportZ.html
@@ -187,7 +187,7 @@
         
         //ワイヤーフレーム
         var f_body_wg = new THREE.SphereGeometry( 2, 32, 32 );
-        var mat_b_w = new THREE.MeshPhongMaterial({ color: 0x0000ff ,wireframe: true});
+        var mat_b_w = new THREE.MeshBasicMaterial({ color: 0x0000ff ,wireframe: true});
         var f_body_w = new THREE.Mesh( f_body_wg, mat_b_w);
         //f_body_w.castShadow = true;
         f_body_w.scale.set(0.1,0.1,0.1);
