--- a/reportZ.html
+++ b/reportZ.html
@@ -352,6 +352,7 @@
             loader.load('3dmodel/Shark.glb', (gltf) => {
               model = gltf.scene;
               model.castShadow = true; 
+              model.receiveShadow = true;
               model.scale.set(4,4,4);
               model.position.set(0,2,-3);
               scene.add(model);
