--- a/reportZ.html
+++ b/reportZ.html
@@ -367,6 +367,11 @@
               scene.remove(tab);
               scene.remove(tab1);
               scene.remove(tab2);
+              scene.remove(f_body_w);
+              scene.remove(part);
+              scene.remove(part1);
+              scene.remove(part2);
+              scene.remove(part3);
             }
           }
           
