--- a/reportZ.html
+++ b/reportZ.html
@@ -368,10 +368,10 @@
               scene.remove(tab1);
               scene.remove(tab2);
               scene.remove(f_body_w);
-              scene.remove(part);
-              scene.remove(part1);
-              scene.remove(part2);
-              scene.remove(part3);
+              scene.remove(parts);
+              scene.remove(parts1);
+              scene.remove(parts2);
+              scene.remove(parts3);
             }
           }
           
