--- a/reportZ.html
+++ b/reportZ.html
@@ -352,8 +352,12 @@
           if(i >= 5){
             loader.load('3dmodel/Shark.glb', (gltf) => {
               model = gltf.scene;
-              model.castShadow = true; 
-              model.receiveShadow = true;
+              model.traverse((object) => { 
+                if(object.isMesh) { 
+                  model.castShadow = true; 
+                  model.receiveShadow = true;
+                }
+              });
               model.scale.set(4,4,4);
               model.position.set(0,2,-3);
               scene.add(model);
