--- a/report5.html
+++ b/report5.html
@@ -29,6 +29,7 @@
 
         // シーンを作成
         const scene = new THREE.Scene();
+        scene.fog = new THREE.Fog(0x000000, 50, 2000);
 
         // カメラを作成
         const camera = new THREE.PerspectiveCamera(45, width / height);
