--- a/reportZ.html
+++ b/reportZ.html
@@ -211,20 +211,20 @@
         tab2.rotation.y = -0.2;
         tab2.position.set(5,1,3);
         
-        var box_g = new THREE.BoxGeometry(7, 0.1, 7);
+        var box_g = new THREE.BoxGeometry(9, 0.1, 9);
         var box_m = new THREE.MeshPhongMaterial({ color: 0x0000ff });
         var box = new THREE.Mesh(box_g,box_m);
         box.scale.set(0.01,0.01,0.01);
-        box.position.set(0,1,0);
+        box.position.set(-1.5,1,-3);
         scene.add(box);
 
         var box2 = new THREE.Mesh(box_g,box_m);
         box2.scale.set(0.01,0.01,0.01);
-        box2.position.set(0,1,0);
+        box2.position.set(-1.5,1,-3);
         scene.add(box2);
 
         var laser = new THREE.Mesh(box_g,mat_b_w);
-        laser.position.set(0,1,0);
+        laser.position.set(-1.5,1,-3);
         laser.scale.set(0.01,0.01,0.01);
         scene.add(laser);
         
