--- a/reportZ.html
+++ b/reportZ.html
@@ -316,7 +316,7 @@
             }
           }
           
-          if(box.scale.x <= 1){
+          if(box.scale.x <= 1 && tab2.scale.y >= 2){
             box.scale.x += 0.03;
             box.scale.y += 0.03;
             box.scale.z += 0.03;
