--- a/reportZ.html
+++ b/reportZ.html
@@ -329,7 +329,7 @@
             laser.scale.y += 0.03;
             laser.scale.z += 0.03;
             laser.rotation.y += 0.05;
-          } else if(box.position.y <= 4){
+          } else if(box.scale.x >= 1 && box.position.y <= 4){
             box.position.y += 0.03;
             box2.position.y -= 0.03;
             laser.scale.y += 0.6;
