--- a/reportZ.html
+++ b/reportZ.html
@@ -276,11 +276,10 @@
             box.position.y += 0.03;
             box2.position.y -= 0.03;
             laser.scale.y += 0.6;
-          }
-          if(box.position.y >= 5){
+          } else if(j <= 6){
             scene.add(f_body_w);
-          }   
-        
+          }
+          
           if(j >= 3 && parts.scale.x <= 3){
             if(parts.scale.x == 0.1){
               scene.add(parts);
