--- a/reportZ.html
+++ b/reportZ.html
@@ -276,7 +276,7 @@
             box.position.y += 0.03;
             box2.position.y -= 0.03;
             laser.scale.y += 0.6;
-          } else if(j <= 6 && box.position.y <= 5){
+          } else if(j >= 5 && j <= 6){
             scene.add(f_body_w);
           }
           
