--- a/reportZ.html
+++ b/reportZ.html
@@ -321,7 +321,7 @@
                 scene.remove(parts);
               } 
             }
-            if(box.scale.x >= 1 && box.scale.x <= 0.1){
+            if(box.scale.x >= 0.1){
               box.scale.x -= 0.03;
               box.scale.y -= 0.03;
               box.scale.z -= 0.03;
