--- a/reportZ.html
+++ b/reportZ.html
@@ -334,6 +334,12 @@
               laser.scale.y -= 0.03;
               laser.scale.z -= 0.03;
               laser.rotation.y -= 0.05;
+              f_body_w.scale.x -= 0.03;
+              f_body_w.scale.y -= 0.03;
+              f_body_w.scale.z -= 0.03;
+              parts.scale.x -= 0.03;
+              parts.scale.y -= 0.03;
+              parts.scale.z -= 0.03;
             } else{
               scene.remove(box);
               scene.remove(box2);
