--- a/reportZ.html
+++ b/reportZ.html
@@ -282,9 +282,11 @@
               box.position.y += 0.03;
               box2.position.y -= 0.03;
               laser.scale.y += 0.6;
-            } else if(j >= 5 && j <= 6){
-              scene.add(f_body_w);
-            }
+            } 
+          }
+          
+          if(laser.scale.y >= 5){
+            scene.add(f_body_w);
           }
           
           if(j >= 3 && parts.scale.x <= 3){
