--- a/reportZ.html
+++ b/reportZ.html
@@ -285,7 +285,7 @@
             } 
           }
           
-          if(laser.scale.y >= 5){
+          if(box.position.y >= 4.5){
             scene.add(f_body_w);
           }
           
