--- a/reportZ.html
+++ b/reportZ.html
@@ -325,7 +325,7 @@
                 scene.remove(laser);
               } 
             }
-            if(box.scale.x >= 0.1){
+            if(box.scale.x >= 0.1 && tab.scale.y <= 0.2){
               box.scale.x -= 0.03;
               box.scale.y -= 0.03;
               box.scale.z -= 0.03;
@@ -338,7 +338,7 @@
               parts.scale.x -= 0.03;
               parts.scale.y -= 0.03;
               parts.scale.z -= 0.03;
-            } else{
+            } else if(box.scale.x >= 0.1 && i >= 8){
               scene.remove(box);
               scene.remove(box2);
               
