--- a/reportZ.html
+++ b/reportZ.html
@@ -338,7 +338,7 @@
               parts.scale.x -= 0.03;
               parts.scale.y -= 0.03;
               parts.scale.z -= 0.03;
-            } else if(box.scale.x >= 0.1 && i >= 6){
+            } else if(box.scale.x <= 0.1 && i >= 6){
               scene.remove(box);
               scene.remove(box2);
               
