--- a/reportZ.html
+++ b/reportZ.html
@@ -278,11 +278,11 @@
             } 
           }
           
-          if(box.position.y >= 5){
+          if(box.position.y >= 6){
             scene.add(f_body_w);
           }
           
-          if(j >= 3 && parts.scale.x <= 3){
+          if(i >= 6 && parts.scale.x <= 3){
             if(parts.scale.x == 0.1){
               scene.add(parts);
             }
